# ChangeLog for gnome-base/gnome-settings-daemon
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-settings-daemon/ChangeLog,v 1.4 2008/06/01 10:01:02 eva Exp $

  01 Jun 2008; Gilles Dartiguelongue <eva@gentoo.org>
  gnome-settings-daemon-2.22.0.ebuild, gnome-settings-daemon-2.22.1.ebuild,
  gnome-settings-daemon-2.22.2.1.ebuild:
  rename pkg_config to pkg_setup, fix bug #224437

*gnome-settings-daemon-2.22.2.1 (31 May 2008)

  31 May 2008; Gilles Dartiguelongue <eva@gentoo.org>
  +gnome-settings-daemon-2.22.2.1.ebuild:
  New version for GNOME-2.22.2. Fix background handling and updated
  translations.

  07 Apr 2008; Gilles Dartiguelongue <eva@gentoo.org> ChangeLog:
  bump to 2.22.1, bug fixes, plug memory leaks and more.

*gnome-settings-daemon-2.22.0 (23 Mar 2008)

  23 Mar 2008; Gilles Dartiguelongue <eva@gentoo.org>
  +gnome-settings-daemon-2.22.0.ebuild:
  New version for GNOME-2.22. New design splitted out of control-center.
